--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "migrate": "MIGRATIONS=true tsx src/scripts/migrate.ts",
+    "migrate:down": "MIGRATIONS=true tsx src/scripts/migrateDown.ts"
   },
   "dependencies": {
     "@auth0/nextjs-auth0": "^4.0.1",
@@ -37,6 +39,7 @@
     "eslint-config-next": "15.1.7",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
+    "tsx": "^4.20.5",
     "typescript": "^5"
   }
 }
