--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-rating-stars-component": "^2.2.0",
     "react-select": "^5.10.1",
     "react-simple-star-rating": "^5.1.7",
+    "supabase": "^2.47.2",
     "zod": "^3.24.2"
   },
   "devDependencies": {
