--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@auth0/nextjs-auth0": "^4.0.1",
     "@hookform/resolvers": "^4.0.0",
+    "@supabase/supabase-js": "^2.58.0",
     "axios": "^1.8.4",
     "jose": "^6.0.10",
     "jsonwebtoken": "^9.0.2",
